fixed white space on small screen

--- a/src/components/commonComps/styles/FirstSection.css
+++ b/src/components/commonComps/styles/FirstSection.css
@@ -1,7 +1,7 @@
 
 .firstSection {
     position: relative;
-
+    margin-top: -12.5vh;
 
 }
 .firstSectionWrapper {
